z-index issue with jsplumb-connector

--- a/src/main/webapp/templates/apps/funnels/journeyBuilder.css
+++ b/src/main/webapp/templates/apps/funnels/journeyBuilder.css
@@ -146,6 +146,10 @@
     padding: 0 20px;
 }
 
+.jsplumb-connector {
+    z-index: 4;
+}
+
 .node .title .node-buttons {
     position: absolute;
     top: 5px;
